--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -333,6 +333,8 @@
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Kurzer Name (max 32 Buchstaben)",
             "symbol": "Symbol",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "An Konto übergeben",
             "too_large": "Die max. Verfügbarkeit ist zu groß, bitte wählen Sie eine kleinere Zahl!",
             "too_many_feed": "Die Anzahl der Preisquellen hat den Maximalwert von (%(max)s überschritten).",
@@ -825,6 +827,7 @@
         },
         "asset": {
             "actions": "Anlage Aktionen",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "Bid Collateral",
                 "bid_price": "Bid price",
@@ -940,6 +943,7 @@
                 "issuer": "Herausgeber",
                 "market_fee": "Marktgebühr",
                 "market_fee_referral_reward_percent": "Market fee referral reward",
+                "market_fee_referral_taker_fee_percent": "Taker fee percent",
                 "stealth_supply": "Stealth Verfügbarkeit"
             },
             "title": "Anlagen",
@@ -1763,6 +1767,12 @@
         "blacklisted_by": "{lister} hat Konto {listee} schwarzgelistet.",
         "call_order_update": "{account} hat nun {debt} {debtSymbol} Schulden mit einer Sicherheit von {collateral}.",
         "committee_member_update_global_parameters": "{account} hat die globalen Komitee Parameter aktualsiert.",
+        "credit_deal_expired": "{account} credit deal has expired.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
+        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
+        "credit_offer_delete": "{account} deleted credit offer #{id}.",
+        "credit_offer_update": "{account} update a credit offer #{id}.",
         "fill_order_buy": "{account} hat {amount} zum Preis von {price} gekauft.",
         "fill_order_sell": "{account} hat {amount} zum Preis von {price} verkauft.",
         "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
@@ -1774,6 +1784,11 @@
         "limit_order_buy": "{account} hat einen Kaufauftrag von {amount} für {price} eingestellt.",
         "limit_order_cancel": "{account} hat Auftrag #%(order)s zurückgezogen.",
         "limit_order_sell": "{account} hat einen Verkaufsauftrag von {amount} für {price} eingestellt.",
+        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
+        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
+        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
+        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
+        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
         "no_recent": "keine kürzlichen Transaktionen",
         "override_transfer": "{issuer} hat {amount} von {from} nach {to} überwiesen.",
         "pending": "schwebend %(blocks)s Blöcke",
@@ -2566,6 +2581,12 @@
             "committee_member_create": "Komiteemitglied erstellen",
             "committee_member_update": "Komiteemitglied editieren",
             "committee_member_update_global_parameters": "Globale Parameter aktualisiert",
+            "credit_deal_expired": "Credit deal expired",
+            "credit_deal_repay": "Repay credit deal",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
             "custom": "benutzerdefiniert",
             "execute_bid": "Execute bid",
             "fba_distribute": "Fee backed asset distribution",
@@ -2577,6 +2598,11 @@
             "htlc_refund": "HTLC refund",
             "limit_order_cancel": "Limit-Auftrag abbrechen",
             "limit_order_create": "Limit-Auftrag",
+            "liquidity_pool_create": "Create liquidity pool",
+            "liquidity_pool_delete": "Delete liquidity pool",
+            "liquidity_pool_deposit": "Add liquidity",
+            "liquidity_pool_exchange": "Exchange liquidity",
+            "liquidity_pool_withdraw": "Remove liquidity",
             "override_transfer": "Übwereisung überschreiben",
             "proposal_create": "Vorschlag erstellen",
             "proposal_delete": "Vorschlag löschen",
