--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -331,10 +331,10 @@
             "resolve_prediction_text": "The asset prediction can be resolved here.",
             "reward_percent": "Reward percent",
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
-            "taker_fee_percent": "Taker Fee percent",
-            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "short": "Short name (max 32 characters)",
             "symbol": "Symbol",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "Issue to account",
             "too_large": "That max supply is too big, please choose a smaller number",
             "too_many_feed": "Number of feed producers exceeded the max allowed (%(max)s).",
@@ -826,8 +826,8 @@
             "title": "Accounts"
         },
         "asset": {
-            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "actions": "Asset actions",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "Bid Collateral",
                 "bid_price": "Bid price",
@@ -1767,6 +1767,12 @@
         "blacklisted_by": "{lister} blacklisted the account {listee}",
         "call_order_update": "{account} changed {debtSymbol} debt by {debt} and collateral by {collateral}",
         "committee_member_update_global_parameters": "{account} updated the global committee parameters",
+        "credit_deal_expired": "{account} credit deal has expired.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
+        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
+        "credit_offer_delete": "{account} deleted credit offer #{id}.",
+        "credit_offer_update": "{account} update a credit offer #{id}.",
         "fill_order_buy": "{account} bought {amount} at {price} for order #%(order)s",
         "fill_order_sell": "{account} sold {amount} at {price} for order #%(order)s",
         "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
@@ -1778,6 +1784,11 @@
         "limit_order_buy": "{account} placed order %(order)s to buy {amount} at {price}",
         "limit_order_cancel": "{account} cancelled order #%(order)s",
         "limit_order_sell": "{account} placed order %(order)s to sell {amount} at {price}",
+        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
+        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
+        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
+        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
+        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
         "no_recent": "No recent transactions",
         "override_transfer": "{issuer} transferred {amount} from {from} to {to}",
         "pending": "pending %(blocks)s blocks",
@@ -1810,18 +1821,7 @@
         "witness_pay": "Withdrew witness pay to account",
         "witness_receive": "Received witness from witness",
         "witness_update": "{account} update its witness info",
-        "worker_create": "{account} created a worker proposal with daily pay of {pay}",
-        "credit_offer_delete": "{account} deleted credit offer #{id}.",
-        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
-        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
-        "credit_offer_update": "{account} update a credit offer #{id}.",
-        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
-        "credit_deal_expired": "{account} credit deal has expired.",
-        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
-        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
-        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
-        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
-        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}."
+        "worker_create": "{account} created a worker proposal with daily pay of {pay}"
     },
     "page404": {
         "asset_not_found_subtitle": "That asset does not exist",
@@ -2581,6 +2581,12 @@
             "committee_member_create": "Create committee member",
             "committee_member_update": "Update committee member",
             "committee_member_update_global_parameters": "Global parameters update",
+            "credit_deal_expired": "Credit deal expired",
+            "credit_deal_repay": "Repay credit deal",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
             "custom": "Custom",
             "execute_bid": "Execute bid",
             "fba_distribute": "Fee backed asset distribution",
@@ -2592,6 +2598,11 @@
             "htlc_refund": "HTLC refund",
             "limit_order_cancel": "Cancel order",
             "limit_order_create": "Place order",
+            "liquidity_pool_create": "Create liquidity pool",
+            "liquidity_pool_delete": "Delete liquidity pool",
+            "liquidity_pool_deposit": "Add liquidity",
+            "liquidity_pool_exchange": "Exchange liquidity",
+            "liquidity_pool_withdraw": "Remove liquidity",
             "override_transfer": "Override transfer",
             "proposal_create": "Create proposal",
             "proposal_delete": "Delete proposal",
@@ -2609,18 +2620,7 @@
             "witness_create": "Create witness",
             "witness_update": "Update witness",
             "witness_withdraw_pay": "Witness pay withdrawal",
-            "worker_create": "Create worker",
-            "credit_offer_create": "Create credit offer",
-            "credit_offer_delete": "Delete credit offer",
-            "credit_offer_update": "Update credit offer",
-            "credit_offer_accept": "Accept credit offer",
-            "credit_deal_repay": "Repay credit deal",
-            "credit_deal_expired": "Credit deal expired",
-            "liquidity_pool_create": "Create liquidity pool",
-            "liquidity_pool_delete": "Delete liquidity pool",
-            "liquidity_pool_deposit": "Add liquidity",
-            "liquidity_pool_withdraw": "Remove liquidity",
-            "liquidity_pool_exchange": "Exchange liquidity"
+            "worker_create": "Create worker"
         },
         "vesting_balance_create": "created vesting balance of",
         "view_json": "Show raw json",
