--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -333,6 +333,8 @@
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Nombre corto (max 32 caracteres)",
             "symbol": "Simbolo",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "Emitir a la cuenta",
             "too_large": "Este oferta máximo es demasiado grande, por favor elija un número más pequeño",
             "too_many_feed": "El número de productores de alimento excedió el máximo permitido (% (max) s)",
@@ -825,6 +827,7 @@
         },
         "asset": {
             "actions": "Acciones de activos",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "Bid Colateral",
                 "bid_price": "Bid Precio",
@@ -940,6 +943,7 @@
                 "issuer": "Emisor",
                 "market_fee": "Comisión de mercado",
                 "market_fee_referral_reward_percent": "Market fee referral reward",
+                "market_fee_referral_taker_fee_percent": "Taker fee percent",
                 "stealth_supply": "Suministro de sigilo"
             },
             "title": "Activo",
@@ -1763,6 +1767,12 @@
         "blacklisted_by": "{lister} puso en la lista negra la cuenta {listee}",
         "call_order_update": "{account} cambiado {debtSymbol} deuda por {debt} y colateral por {collateral}",
         "committee_member_update_global_parameters": "{account} actualizado los parámetros del comité global",
+        "credit_deal_expired": "{account} credit deal has expired.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
+        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
+        "credit_offer_delete": "{account} deleted credit offer #{id}.",
+        "credit_offer_update": "{account} update a credit offer #{id}.",
         "fill_order_buy": "{account} comprò {amount} a {price}",
         "fill_order_sell": "{account} vendido {amount} a {price}",
         "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
@@ -1774,6 +1784,11 @@
         "limit_order_buy": "{account} colocado un orden de compra de {amount} a {price}",
         "limit_order_cancel": "{account} orden cancelada #%(order)s",
         "limit_order_sell": "{account} colocado un orden de venta de {amount} a {price}",
+        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
+        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
+        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
+        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
+        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
         "no_recent": "Sin transacciones recientes",
         "override_transfer": "{issuer} transferido {amount} da {from} a {to}",
         "pending": "%(blocks)s bloques pendientes",
@@ -2566,6 +2581,12 @@
             "committee_member_create": "Crear miembro del Comité",
             "committee_member_update": "Actualizaziòn miembro del comité de ",
             "committee_member_update_global_parameters": "Actualización global de parámetros",
+            "credit_deal_expired": "Credit deal expired",
+            "credit_deal_repay": "Repay credit deal",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
             "custom": "Personalizado",
             "execute_bid": "Ejecutar puja",
             "fba_distribute": "Distribución de activos respaldados por honorarios",
@@ -2577,6 +2598,11 @@
             "htlc_refund": "HTLC refund",
             "limit_order_cancel": "Cancelar orden",
             "limit_order_create": "Publicar orden",
+            "liquidity_pool_create": "Create liquidity pool",
+            "liquidity_pool_delete": "Delete liquidity pool",
+            "liquidity_pool_deposit": "Add liquidity",
+            "liquidity_pool_exchange": "Exchange liquidity",
+            "liquidity_pool_withdraw": "Remove liquidity",
             "override_transfer": "Anular transferencia",
             "proposal_create": "Crear propuesta",
             "proposal_delete": "Eliminar propuesta",
