--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -333,6 +333,8 @@
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Nome breve (massimo 32 caratteri)",
             "symbol": "Simbolo",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "Emetti nell'account",
             "too_large": "La disponibilità massima è eccessiva, per favore scegli un numero più piccolo",
             "too_many_feed": "Number of feed producers exceeded the max allowed (%(max)s).",
@@ -819,6 +821,7 @@
         },
         "asset": {
             "actions": "Asset actions",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "Bid Collateral",
                 "bid_price": "Bid price",
@@ -934,6 +937,7 @@
                 "issuer": "Erogatore",
                 "market_fee": "Commissione di mercato",
                 "market_fee_referral_reward_percent": "Market fee referral reward",
+                "market_fee_referral_taker_fee_percent": "Taker fee percent",
                 "stealth_supply": "Disponibilità nascosta"
             },
             "title": "Asset",
@@ -1757,6 +1761,12 @@
         "blacklisted_by": "{lister} ha messo in blacklist l'account {listee}",
         "call_order_update": "{account} ha cambiato il debito {debtSymbol} di {debt} e la garanzia di {collateral}",
         "committee_member_update_global_parameters": "{account} ha aggiornato i parametri globali del comitato",
+        "credit_deal_expired": "{account} credit deal has expired.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
+        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
+        "credit_offer_delete": "{account} deleted credit offer #{id}.",
+        "credit_offer_update": "{account} update a credit offer #{id}.",
         "fill_order_buy": "{account} ha acquistato {amount} per {price}",
         "fill_order_sell": "{account} ha venduto {amount} per {price}",
         "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
@@ -1768,6 +1778,11 @@
         "limit_order_buy": "{account} ha fatto un ordine per comprare {amount} a {price}",
         "limit_order_cancel": "{account} ha annullato l'ordine #%(order)s",
         "limit_order_sell": "{account} ha fatto un ordine per vendere {amount} a {price}",
+        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
+        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
+        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
+        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
+        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
         "no_recent": "Nessuna transazione recente",
         "override_transfer": "{issuer} ha trasferito {amount} da {from} a {to}",
         "pending": "in attesa da %(blocks)s blocchi",
@@ -2560,6 +2575,12 @@
             "committee_member_create": "Crea membro del comitato",
             "committee_member_update": "Aggiorna membro del comitato",
             "committee_member_update_global_parameters": "Aggiornamento parametri globali",
+            "credit_deal_expired": "Credit deal expired",
+            "credit_deal_repay": "Repay credit deal",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
             "custom": "Personalizzato",
             "execute_bid": "Execute bid",
             "fba_distribute": "Fee backed asset distribution",
@@ -2571,6 +2592,11 @@
             "htlc_refund": "HTLC refund",
             "limit_order_cancel": "Annulla un ordine",
             "limit_order_create": "Fai un ordine",
+            "liquidity_pool_create": "Create liquidity pool",
+            "liquidity_pool_delete": "Delete liquidity pool",
+            "liquidity_pool_deposit": "Add liquidity",
+            "liquidity_pool_exchange": "Exchange liquidity",
+            "liquidity_pool_withdraw": "Remove liquidity",
             "override_transfer": "Override del trasferimento",
             "proposal_create": "Crea proposta",
             "proposal_delete": "Cancella proposta",
