--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -333,6 +333,8 @@
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "ショートネーム (最大32文字)",
             "symbol": "シンボル",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "アカウントへ発行",
             "too_large": "最大供給量が大きすぎます。より少ない数を選択してください。",
             "too_many_feed": "Number of feed producers exceeded the max allowed (%(max)s).",
@@ -819,6 +821,7 @@
         },
         "asset": {
             "actions": "Asset actions",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "Bid Collateral",
                 "bid_price": "Bid price",
@@ -934,6 +937,7 @@
                 "issuer": "発行者",
                 "market_fee": "取引手数料",
                 "market_fee_referral_reward_percent": "Market fee referral reward",
+                "market_fee_referral_taker_fee_percent": "Taker fee percent",
                 "stealth_supply": "隠れた供給量"
             },
             "title": "アセット",
@@ -1757,6 +1761,12 @@
         "blacklisted_by": "{lister}は{listee}をブラックリストに登録しました",
         "call_order_update": "{account}は{debtSymbol}の賃借を{debt}に、担保を{collateral}に変更しました。",
         "committee_member_update_global_parameters": "{account}はグローバル委員会のパラメータを更新しました",
+        "credit_deal_expired": "{account} credit deal has expired.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
+        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
+        "credit_offer_delete": "{account} deleted credit offer #{id}.",
+        "credit_offer_update": "{account} update a credit offer #{id}.",
         "fill_order_buy": "{account}は{price}で{amount}を購入しました",
         "fill_order_sell": "{account}は{price}で{amount}を売却しました",
         "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
@@ -1768,6 +1778,11 @@
         "limit_order_buy": "{account}は{price}で{amount}の買い注文を出しました",
         "limit_order_cancel": "{account}は注文#%(order)sをキャンセルしました",
         "limit_order_sell": "{account}は{price}で{amount}の売り注文を出しました",
+        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
+        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
+        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
+        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
+        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
         "no_recent": "最近の取引がありません",
         "override_transfer": "{issuer}は{amount}を{from}から{to}に転送しました",
         "pending": "保留中... %(blocks)sブロック",
@@ -2560,6 +2575,12 @@
             "committee_member_create": "委員を作成",
             "committee_member_update": "委員を更新",
             "committee_member_update_global_parameters": "グローバルパラメータ更新",
+            "credit_deal_expired": "Credit deal expired",
+            "credit_deal_repay": "Repay credit deal",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
             "custom": "カスタム",
             "execute_bid": "Execute bid",
             "fba_distribute": "Fee backed asset distribution",
@@ -2571,6 +2592,11 @@
             "htlc_refund": "HTLC refund",
             "limit_order_cancel": "注文をキャンセル",
             "limit_order_create": "注文を出す",
+            "liquidity_pool_create": "Create liquidity pool",
+            "liquidity_pool_delete": "Delete liquidity pool",
+            "liquidity_pool_deposit": "Add liquidity",
+            "liquidity_pool_exchange": "Exchange liquidity",
+            "liquidity_pool_withdraw": "Remove liquidity",
             "override_transfer": "オーバーライド転送",
             "proposal_create": "提案を作成",
             "proposal_delete": "提案を削除",
