--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -333,6 +333,8 @@
             "reward_percent_tooltip": "Если была установлена рыночная комиссия, то процент вознаграждения указывает, какая часть этой комиссии будет распределяться через программу вознаграждения рефералов, помимо отчислений владельцу актива.",
             "short": "Короткое имя (максимум 32 символа)",
             "symbol": "Тикер",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "Эмитировать на аккаунт",
             "too_large": "Максимальное предложение токенов слишком велико, пожалуйста, выберите меньшее количество",
             "too_many_feed": "Число производителей котировок превысило максимально допустимое (%(max)s).",
@@ -825,6 +827,7 @@
         },
         "asset": {
             "actions": "Действия с активами",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "Обеспечение предложения",
                 "bid_price": "Цена предложения",
@@ -940,6 +943,7 @@
                 "issuer": "Владелец актива",
                 "market_fee": "Рыночная комиссия",
                 "market_fee_referral_reward_percent": "Реферальное вознаграждение с рыночной комиссии",
+                "market_fee_referral_taker_fee_percent": "Taker fee percent",
                 "stealth_supply": "Стелс предложение"
             },
             "title": "Актив",
@@ -1763,6 +1767,12 @@
         "blacklisted_by": "{lister} добавил аккаунт {listee} в чёрный список",
         "call_order_update": "{account} заменил {debtSymbol} долг на {debt} и залог на {collateral}",
         "committee_member_update_global_parameters": "{account} обновил общие параметры комитета",
+        "credit_deal_expired": "{account} credit deal has expired.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
+        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
+        "credit_offer_delete": "{account} deleted credit offer #{id}.",
+        "credit_offer_update": "{account} update a credit offer #{id}.",
         "fill_order_buy": "{account} купил {amount} по цене {price} в ордере #%(order)s",
         "fill_order_sell": "{account} продал {amount} по цене {price} в ордере #%(order)s",
         "htlc_create": "{from} заблокировал {amount} для {to} для востребования до {lock_period}",
@@ -1774,6 +1784,11 @@
         "limit_order_buy": "{account} разместил ордер %(order)s на покупку {amount} по {price}",
         "limit_order_cancel": "{account} отменил ордер #%(order)s",
         "limit_order_sell": "{account} разместил ордер %(order)s на продажу {amount} по {price}",
+        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
+        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
+        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
+        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
+        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
         "no_recent": "Нет недавних транзакций",
         "override_transfer": "{issuer} перевел {amount} с {from} на {to}",
         "pending": "обрабатывается ещё %(blocks)s блоков",
@@ -2566,6 +2581,12 @@
             "committee_member_create": "Создать члена комитета",
             "committee_member_update": "Обновить члена комитета",
             "committee_member_update_global_parameters": "Обновление глобальных параметров",
+            "credit_deal_expired": "Credit deal expired",
+            "credit_deal_repay": "Repay credit deal",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
             "custom": "Специальная",
             "execute_bid": "Выполнить ставку",
             "fba_distribute": "Распределение обеспеченного комиссией актива",
@@ -2577,6 +2598,11 @@
             "htlc_refund": "Вернуть HTLC",
             "limit_order_cancel": "Отмена ордера",
             "limit_order_create": "Размещение ордера",
+            "liquidity_pool_create": "Create liquidity pool",
+            "liquidity_pool_delete": "Delete liquidity pool",
+            "liquidity_pool_deposit": "Add liquidity",
+            "liquidity_pool_exchange": "Exchange liquidity",
+            "liquidity_pool_withdraw": "Remove liquidity",
             "override_transfer": "Замена перевода",
             "proposal_create": "Создание предложения",
             "proposal_delete": "Удаление предложения",
