--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -333,6 +333,8 @@
             "reward_percent_tooltip": "Bir piyasa ücreti belirlenirse, ödül yüzdesi, yalnızca varlık sahibine fayda sağlamak yerine, bu piyasa ücretinin ne kadarının yönlendirme ödülleri programı aracılığıyla paylaşıldığını gösterir.",
             "short": "Kısa ad (maksimum 32 harf)",
             "symbol": "Sembol",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "Hesaba çıkar",
             "too_large": "Bu maksimum arz çok büyük, lütfen daha küçük bir sayı seçin",
             "too_many_feed": "Yem üreticisi sayısı izin verilen maksimum değeri aştı (%(max)s).",
@@ -819,6 +821,7 @@
         },
         "asset": {
             "actions": "Varlık işlemleri",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "Teklif Teminatı",
                 "bid_price": "Teklif fiyatı",
@@ -934,6 +937,7 @@
                 "issuer": "İhraç Eden",
                 "market_fee": "Piyasa ücreti",
                 "market_fee_referral_reward_percent": "Piyasa ücreti yönlendirme ödülü",
+                "market_fee_referral_taker_fee_percent": "Taker fee percent",
                 "stealth_supply": "Gizli arz"
             },
             "title": "Aktif",
@@ -1757,6 +1761,12 @@
         "blacklisted_by": "{lister} kara listeye {listee} adlı hesabı ekledi.",
         "call_order_update": "{account} {debtSymbol} borcunu {debt} olarak, teminatı {collateral} olarak değiştirdi.",
         "committee_member_update_global_parameters": "{account} evrensel kurul parametrelerini güncelledi.",
+        "credit_deal_expired": "{account} credit deal has expired.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
+        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
+        "credit_offer_delete": "{account} deleted credit offer #{id}.",
+        "credit_offer_update": "{account} update a credit offer #{id}.",
         "fill_order_buy": "{account} bought {amount} at {price}",
         "fill_order_sell": "{account} sold {amount} at {price}",
         "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
@@ -1768,6 +1778,11 @@
         "limit_order_buy": "{account} {amount} alış emri verdi - Fiyat: {price} ",
         "limit_order_cancel": "{account} emir iptal etti: #%(order)s",
         "limit_order_sell": "{account} {amount} satış emri verdi - Fiyat: {price} ",
+        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
+        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
+        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
+        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
+        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
         "no_recent": "Yeni işlem yok",
         "override_transfer": "{issuer}, {amount} miktarda dijital varlığı {from} adresinden {to} adresine aktardı.",
         "pending": "%(blocks)s blok sonra tam onaylı.",
@@ -2560,6 +2575,12 @@
             "committee_member_create": "Kurul üyesi oluşturma",
             "committee_member_update": "Kurul üyesini güncelle",
             "committee_member_update_global_parameters": "Genel değişkenleri güncelleme",
+            "credit_deal_expired": "Credit deal expired",
+            "credit_deal_repay": "Repay credit deal",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
             "custom": "Kişiye özel",
             "execute_bid": "Teklifi uygula",
             "fba_distribute": "Ücrete dayalı varlık dağılımı",
@@ -2571,6 +2592,11 @@
             "htlc_refund": "HTLC geri ödemesi",
             "limit_order_cancel": "İptal edilen emir",
             "limit_order_create": "Emir girişi",
+            "liquidity_pool_create": "Create liquidity pool",
+            "liquidity_pool_delete": "Delete liquidity pool",
+            "liquidity_pool_deposit": "Add liquidity",
+            "liquidity_pool_exchange": "Exchange liquidity",
+            "liquidity_pool_withdraw": "Remove liquidity",
             "override_transfer": "Transferi yenileme",
             "proposal_create": "Teklif oluşturma",
             "proposal_delete": "Teklif silme",
