--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -333,6 +333,8 @@
             "reward_percent_tooltip": "如果设置了市场手续费，奖励百分比则表示有多少市场手续费通过引荐奖励计划进行分享，而不是仅仅奖励资产发行人。",
             "short": "简称 (最多32个字符)",
             "symbol": "资产符号",
+            "taker_fee_percent": "Taker Fee percent",
+            "taker_fee_percent_tooltip": "If taker fee is set, the taker percent indicates how much percent is shared with the asset owner.",
             "to": "发行到账户",
             "too_large": "最大资产总量太大，请选一个小点的数字",
             "too_many_feed": "喂价提供者数量超出了允许的最大值(%(max)s).",
@@ -825,6 +827,7 @@
         },
         "asset": {
             "actions": "资产操作",
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "collateral": {
                 "bid": "竞价抵押物",
                 "bid_price": "竞标价格",
@@ -940,6 +943,7 @@
                 "issuer": "资产所有者",
                 "market_fee": "市场手续费率",
                 "market_fee_referral_reward_percent": "市场手续费引荐奖励",
+                "market_fee_referral_taker_fee_percent": "Taker fee percent",
                 "stealth_supply": "隐私供应量"
             },
             "title": "资产",
@@ -1763,6 +1767,12 @@
         "blacklisted_by": "{lister} 将 {listee} 加入黑名单",
         "call_order_update": "{account} 将 {debtSymbol} 的债务调整了 {debt}，抵押物调整了 {collateral}",
         "committee_member_update_global_parameters": "{account} 更新了全局理事会参数",
+        "credit_deal_expired": "{account} P2P抵押贷逾期。",
+        "credit_deal_repay": "{account} 归还 {amount} P2P抵押贷借款，手续费：{fee}。",
+        "credit_offer_accept": "{account} 从P2P抵押贷借款 {amount}。",
+        "credit_offer_create": "{account} 创建 {amount} 的P2P抵押贷，手续费率：{fee}。",
+        "credit_offer_delete": "{account} 删除P2P抵押贷 #{id}。",
+        "credit_offer_update": "{account} 更新P2P抵押贷 #{id}。",
         "fill_order_buy": "{account} 以 {price} 的价格购买了 {amount} ",
         "fill_order_sell": "{account} 以 {price} 的价格卖出了 {amount} ",
         "htlc_create": "{from} 已锁定 {amount} ,  {to} 可以在 {lock_period}之前进行兑换",
@@ -1774,6 +1784,11 @@
         "limit_order_buy": "{account} 提交买单%(order)s, 以 {price} 的价格买入 {amount} ",
         "limit_order_cancel": "{account} 已取消限价单 #%(order)s",
         "limit_order_sell": "{account} 提交卖单%(order)s, 以 {price} 的价格卖出 {amount} ",
+        "liquidity_pool_create": "{account} 创建流动池：{asset_a}-{asset_b}。",
+        "liquidity_pool_delete": "{account} 删除流动池 #{id}。",
+        "liquidity_pool_deposit": "{account} 增加流动性 #{id}。实际支出 {amount_a}和 {amount_b}。获得 {received}流动性代币。",
+        "liquidity_pool_exchange": "{account} 完成交易，支出 {amount_a}，获得 {amount_b}。",
+        "liquidity_pool_withdraw": "{account} 减少流动性 #{id}。实际支出 {amount_c}流动性代币。获得 {amount_a}和 {amount_b}。",
         "no_recent": "近期无交易",
         "override_transfer": "{issuer} 从 {from} 将 {amount} 转账给 {to}",
         "pending": " %(blocks)s 个区块待定",
@@ -1806,18 +1821,7 @@
         "witness_pay": "将见证人收入提取到账户",
         "witness_receive": "已从见证人处获取见证",
         "witness_update": "{account} 更新了见证人信息",
-        "worker_create": "{account} 创建了工人预算提案，请求日付工资 {pay}",
-        "credit_offer_delete": "{account} 删除P2P抵押贷 #{id}。",
-        "credit_deal_repay": "{account} 归还 {amount} P2P抵押贷借款，手续费：{fee}。",
-        "credit_offer_accept": "{account} 从P2P抵押贷借款 {amount}。",
-        "credit_offer_update": "{account} 更新P2P抵押贷 #{id}。",
-        "credit_offer_create": "{account} 创建 {amount} 的P2P抵押贷，手续费率：{fee}。",
-        "credit_deal_expired": "{account} P2P抵押贷逾期。",
-        "liquidity_pool_create": "{account} 创建流动池：{asset_a}-{asset_b}。",
-        "liquidity_pool_delete": "{account} 删除流动池 #{id}。",
-        "liquidity_pool_deposit": "{account} 增加流动性 #{id}。实际支出 {amount_a}和 {amount_b}。获得 {received}流动性代币。",
-        "liquidity_pool_withdraw": "{account} 减少流动性 #{id}。实际支出 {amount_c}流动性代币。获得 {amount_a}和 {amount_b}。",
-        "liquidity_pool_exchange": "{account} 完成交易，支出 {amount_a}，获得 {amount_b}。"
+        "worker_create": "{account} 创建了工人预算提案，请求日付工资 {pay}"
     },
     "page404": {
         "asset_not_found_subtitle": "此资产不存在",
@@ -2577,6 +2581,12 @@
             "committee_member_create": "创建理事会成员",
             "committee_member_update": "更新理事会成员",
             "committee_member_update_global_parameters": "全局参数更新",
+            "credit_deal_expired": "P2P抵押贷 逾期",
+            "credit_deal_repay": "P2P抵押贷 还款",
+            "credit_offer_accept": "P2P抵押贷 借款",
+            "credit_offer_create": "P2P抵押贷 创建",
+            "credit_offer_delete": "P2P抵押贷 删除",
+            "credit_offer_update": "P2P抵押贷 更新",
             "custom": "自定义",
             "execute_bid": "执行竞价",
             "fba_distribute": "手续费由担保资产分配",
@@ -2588,6 +2598,11 @@
             "htlc_refund": "HTLC 退款",
             "limit_order_cancel": "取消限价单",
             "limit_order_create": "创建限价单",
+            "liquidity_pool_create": "创建流动池",
+            "liquidity_pool_delete": "删除流动池",
+            "liquidity_pool_deposit": "增加流动性",
+            "liquidity_pool_exchange": "流动性交易",
+            "liquidity_pool_withdraw": "减少流动性",
             "override_transfer": "强制转账",
             "proposal_create": "创建提案",
             "proposal_delete": "删除提案",
@@ -2605,18 +2620,7 @@
             "witness_create": "创建见证人",
             "witness_update": "更新见证人",
             "witness_withdraw_pay": "领取见证人报酬",
-            "worker_create": "创建预算项目",
-            "credit_offer_create": "P2P抵押贷 创建",
-            "credit_offer_delete": "P2P抵押贷 删除",
-            "credit_offer_update": "P2P抵押贷 更新",
-            "credit_offer_accept": "P2P抵押贷 借款",
-            "credit_deal_repay": "P2P抵押贷 还款",
-            "credit_deal_expired": "P2P抵押贷 逾期",
-            "liquidity_pool_create": "创建流动池",
-            "liquidity_pool_delete": "删除流动池",
-            "liquidity_pool_deposit": "增加流动性",
-            "liquidity_pool_withdraw": "减少流动性",
-            "liquidity_pool_exchange": "流动性交易"
+            "worker_create": "创建预算项目"
         },
         "vesting_balance_create": "创建待解冻余额",
         "view_json": "显示原始 json",
