--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1789,6 +1789,11 @@
         "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
         "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
         "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
         "no_recent": "No recent transactions",
         "override_transfer": "{issuer} transferred {amount} from {from} to {to}",
         "pending": "pending %(blocks)s blocks",
@@ -2587,6 +2592,11 @@
             "credit_offer_create": "Create credit offer",
             "credit_offer_delete": "Delete credit offer",
             "credit_offer_update": "Update credit offer",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_update": "Update flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_repay": "Repay flash loan",
             "custom": "Custom",
             "execute_bid": "Execute bid",
             "fba_distribute": "Fee backed asset distribution",
